; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/powercfg/extr_advanced.c_AddItem.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/powercfg/extr_advanced.c_AddItem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@hApplet = common dso_local global i32 0, align 4
@CB_INSERTSTRING = common dso_local global i32 0, align 4
@CB_ERR = common dso_local global i64 0, align 8
@CB_SETITEMDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i64, i64*)* @AddItem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AddItem(i32 %0, i32 %1, i64 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i64* %3, i64** %9, align 8
  %13 = load i32, i32* @MAX_PATH, align 4
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %10, align 8
  %16 = alloca i32, i64 %14, align 16
  store i64 %14, i64* %11, align 8
  %17 = load i32, i32* @hApplet, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @MAX_PATH, align 4
  %20 = call i32 @LoadString(i32 %17, i32 %18, i32* %16, i32 %19)
  %21 = load i32, i32* @MAX_PATH, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %43

23:                                               ; preds = %4
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @CB_INSERTSTRING, align 4
  %26 = ptrtoint i32* %16 to i64
  %27 = call i64 @SendMessage(i32 %24, i32 %25, i32 -1, i64 %26)
  store i64 %27, i64* %12, align 8
  %28 = load i64, i64* %12, align 8
  %29 = load i64, i64* @CB_ERR, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %31, label %42

31:                                               ; preds = %23
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* @CB_SETITEMDATA, align 4
  %34 = load i64, i64* %12, align 8
  %35 = trunc i64 %34 to i32
  %36 = load i64, i64* %8, align 8
  %37 = call i64 @SendMessage(i32 %32, i32 %33, i32 %35, i64 %36)
  %38 = load i64, i64* %8, align 8
  %39 = load i64*, i64** %9, align 8
  %40 = load i64, i64* %12, align 8
  %41 = getelementptr inbounds i64, i64* %39, i64 %40
  store i64 %38, i64* %41, align 8
  br label %42

42:                                               ; preds = %31, %23
  br label %43

43:                                               ; preds = %42, %4
  %44 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %44)
  %45 = load i32, i32* %5, align 4
  ret i32 %45
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @LoadString(i32, i32, i32*, i32) #2

declare dso_local i64 @SendMessage(i32, i32, i32, i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
